data/derived/comb/progs/unify/prog5366.ml.out
Characters 20-25:
  let _ = bigMul [9] [1,1,1];;
                      ^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type int
